lang.java.statics.test/tests/positive/packages/on-demand-import-from-toplevel-package.yes.javtest
STATIX ok
JAVAC  ok

[p] {

    [A]
    package p;
    import q.*;
    public class A {
        public C c;
    }

}

[q] {

    [B]
    package q;
    public class B {}

    [C]
    package q;
    public class C {}

}
