lang.java.statics.test/tests/negative/packages/class-and-nested-package-with-same-name.no.javtest
STATIX fail java\.duplicates\.no-duplicate-type.*\"r\"
JAVAC  fail class r clashes with package of same name

[p] {

    [r]
    package p;
    public class r {}

    [r] {

        [q]
        package p.r;
        public class q {}

    }
}
